fix: DSD name next to DSD logo has wrong font weight (WEB-27)

--- a/src/app/components/navbar/navbar.module.css
+++ b/src/app/components/navbar/navbar.module.css
@@ -87,6 +87,7 @@
 @media (max-width: 1150px) {
   .home {
     display: none;
+    font-weight: 900;
   }
 }
 @media (max-width: 768px) {
